--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,52 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+.Inter{
+  font-family: var(--font-geist-Sans);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+*{margin: 0px;
+  padding: 0px;
+  background-color: rgb(44, 42, 42);
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
+.page{
+  max-width:1500px;
+  margin: auto;
+  height:auto ;
+}
+.heading{
+  color:rgb(236, 137, 137);
+    margin-left: 60px;
+    font-size: 36px;
+    text-decoration: underline;
+    margin-top: 14px;
+    
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.para{
+  color: antiquewhite;
+  margin-left: 30px;
+  text-align: left;
+  font-size:14px;
+  font-weight:normal;
+  margin-top: 6px;}
+
+
+ @media (min-width: 640px) {
+  .heading{font-size:44px;}
+  .para{font-size: 18px;}
+  
+ }
+
+ @media(min-width:1020){
+  .heading{
+    font-size: 60px;
+}
+}
+.para{
+    font-size: 30px;
+  
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+ 
